force-app/main/default/objects/numm__CtrlAccounting__c/numm__CtrlAccounting__c.object-meta.xml
<CustomObject>
    <description>Objet des collectifs</description>
    <label>Collectif</label>
    <nameField>
        <label>Collectif</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collectifs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>