force-app/main/default/objects/numm__CtrlAccounting__c/fields/numm__Description__c.field-meta.xml
<CustomField>
    <fullName>numm__Description__c</fullName>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>