force-app/main/default/objects/numm__CtrlAccounting__c/fields/numm__LockedDate__c.field-meta.xml
<CustomField>
    <fullName>numm__LockedDate__c</fullName>
    <inlineHelpText>Date à laquelle le collectif ne peut plus être utilisé</inlineHelpText>
    <label>Date de blocage</label>
    <type>Date</type>
</CustomField>