force-app/main/default/objects/numm__CtrlAccounting__c/fields/numm__TypeDeCollectif__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeDeCollectif__c</fullName>
    <description>Les valeurs du collectif sont BAN pour Banque, CLI pour client et FOU pour Fournisseur</description>
    <label>Type de collectif</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAN</fullName>
            </value>
            <value>
                <fullName>CLI</fullName>
            </value>
            <value>
                <fullName>FOU</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SUB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>